--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <button onclick="window.location.href='cadastro_cliente.html'">Cadastro de Cliente</button>
       <button onclick="window.location.href='cadastro_produtos.html'">Cadastro de Produtos</button>
       <button onclick="window.location.href='vendas.html'">Painel de Vendas</button>
-      <button onclick="window.location.href='pizzas_salgadas.html'">Pizzas Salgadas</button>
+      <button onclick="window.location.href='pizzas_salgados.html'">Pizzas Salgadas</button>
       <button onclick="window.location.href='pizzas_doces.html'">Pizzas Doces</button>
       <button onclick="window.location.href='porcoes.html'">Porções</button>
       <button onclick="window.location.href='bebidas.html'">Bebidas</button>
@@ -115,4 +115,5 @@
     </div>
   </div>
 </body>
+
 </html>
